# mycobot_test

./: README.md
mycobot_control/: CMakeLists.txt  package.xml
mycobot_control/config/: controllers.yaml  device_info.yaml  hardware.yaml  obstacles.yaml
mycobot_control/launch/: mycobot_control.launch  mycobot_moveit.launch  mycobot_obstacles.launch
mycobot_control/src/: mycobot_control.cpp  mycobot_obstacles.cpp
mycobot_controller/: CMakeLists.txt  package.xml
mycobot_controller/config/: device_info.yaml
mycobot_controller/launch/: mycobot_controller.launch
mycobot_controller/scripts/: mycobot_controller.py
mycobot_controller/src/: mycobot_controller.cpp
mycobot_description/: package.xml
mycobot_description/launch/: mycobot_rviz.launch  mycobot_upload.launch
mycobot_description/rviz/: mycobot.rviz
mycobot_description/urdf/: mycobot.gazebo.xacro  mycobot.transmission.xacro  mycobot.urdf.xacro  mycobot_gazebo.urdf  mycobot_robot.urdf.xacro
mycobot_gazebo/: CMakeLists.txt  package.xml
mycobot_gazebo/config/: arm_controller.yaml  default.rviz
mycobot_gazebo/launch/: mycobot_gazebo.launch  mycobot_gazebo_moveit.launch
mycobot_hardware_interface/: CMakeLists.txt  package.xml  plugin_description.xml
mycobot_hardware_interface/include/mycobot_hardware_interface/: mycobot_hw.h
mycobot_hardware_interface/src/: mycobot_hw.cpp
mycobot_libs/: CMakeLists.txt  package.xml
mycobot_libs/config/: test_mycobot.yaml
mycobot_libs/include/mycobot_libs/: mycobot.h
mycobot_libs/launch/: test_mycobot.launch
mycobot_libs/src/: mycobot.cpp  test_mycobot.cpp  utilities.cpp
mycobot_moveit_config/: .setup_assistant  package.xml
mycobot_moveit_config/config/: controllers.yaml  fake_controllers.yaml  mycobot.srdf  mycobot_moveit.rviz  ompl_planning.yaml  ros_controllers.yaml
mycobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  moveit_rviz.launch  mycobot_moveit.launch  mycobot_moveit_controller_manager.launch.xml  mycobot_moveit_sensor_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  setup_assistant.launch  trajectory_execution.launch.xml
mycobot_msgs/: CMakeLists.txt  package.xml
mycobot_msgs/srv/: SetAngles.srv  SetCoords.srv
mycobot_test/: CMakeLists.txt  package.xml
test_serial/: CMakeLists.txt  package.xml
(+4 files in other folders)
