<?xml version="1.0"?>
<package format="2">
  <name>mycobot_hardware_interface</name>
  <version>0.0.0</version>
  <description>The mycobot_hardware_interface package</description>
  <maintainer email="work@todo.todo">work</maintainer>
  <license>TODO</license>
  <url type="website">http://wiki.ros.org/mycobot_hardware_interface</url>
  <author email="jane.doe@example.com">Jane Doe</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>mycobot_libs</build_depend>
  <build_depend>mycobot_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>mycobot_libs</build_export_depend>
  <build_export_depend>mycobot_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>mycobot_libs</exec_depend>
  <exec_depend>mycobot_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <exec_depend>mycobot_control</exec_depend>
  <export>
    <mycobot_control plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
