<?xml version="1.0"?>
<package format="2">
  <name>mycobot_libs</name>
  <version>0.0.0</version>
  <description>The mycobot_libs package</description>
  <maintainer email="ni4shi4@gmail.com">niiiishiiii</maintainer>
  <license>Apache License 2.0</license>
  <!-- <url type="website">http://wiki.ros.org/mycobot_libs</url> -->
  <url type="repository">http://github.io/mycobot_libs</url>
  <author email="ni4shi4@gmail.com">niiiishiiii</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
</package>
